resources/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        imagePullPolicy: IfNotPresent
  
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf

          - name: nginx-config
            mountPath: /var/www/html/index.html
            subPath: index.html

          - name: nginx-config
            mountPath: /var/www/html/another/another.html
            subPath: another.html

          - name: nginx-config
            mountPath: /var/www/html/another/style.css
            subPath: style.css

          - name: nginx-config
            mountPath: /var/www/music/notify.mp3
            subPath: notify.mp3
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-configmap
