resources/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - name: tcp-port
      port: 80
      targetPort: 80
      protocol: TCP
