resources/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  rules:
    - host: mynginx.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: nginx-service
              port:
                number: 80
